<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="example.stage.MainActivity" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/pgw" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:onClick="forgot"
        android:text="@string/cname"
        android:textColor="#0099FF" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/cstring"
        android:textColor="#000000" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:text="@string/exp"
        android:textColor="#0099FF" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:hint="@string/my"
        android:inputType="date"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="130dp"
        android:text="@string/cvv"
        android:textColor="#0099FF" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:ems="10"
        android:hint="@string/cvvText"
        android:inputType="number"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/buttonshape"
        android:onClick="donee"
        android:text="@string/done"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</RelativeLayout>