<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- Header  Starts -->

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="654dp"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                android:src="@drawable/sbg" />
        </FrameLayout>
        <!-- Header Ends -->

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dip" >

            <TableRow>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/source"
                    android:textColor="#0099FF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="250dp"
                    android:layout_height="37dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/buttonshape"
                    android:gravity="center"
                    android:onClick="qrscan"
                    android:text="@string/qr"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/destination"
                    android:textColor="#0099FF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:entries="@array/items"
                    android:prompt="@string/dest" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/noticket"
                    android:textColor="#0099FF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#FFFFFF" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/typeofticket"
                    android:textColor="#0099FF"
                    android:textSize="20sp" />
            </TableRow>

            <RadioGroup
                android:id="@+id/TicketType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/single"
                    android:checked ="true"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/ret"
                    android:textColor="#FFFFFF" />
                 
                </RadioGroup>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/buttonshape"
                    android:gravity="center"
                    android:onClick="booktkt"
                    android:text="@string/bookticket"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
           
        </TableLayout>
    </RelativeLayout>

</ScrollView>