<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="example.stage.MainActivity" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/hdpi_1" />
    </FrameLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow>

            <Button
                android:id="@+id/button2"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="200dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button1"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text="@string/signin"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>