<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- Header  Starts -->

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="654dp"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                android:src="@drawable/sbg" />

        </FrameLayout>
        <!-- Header Ends -->

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dip" >

            <TableRow>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/name"
                    android:textColor="#0099FF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="#FFFFFF" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="29dp"
                    android:text="@string/mobno"
                    android:textColor="#0099FF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:inputType="phone"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/password"
                    android:textColor="#0099FF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/cnfpassword"
                    android:textColor="#0099FF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <Button
                android:id="@+id/button1"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="125dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:onClick="sendd"
                android:text="@string/signup"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </TableLayout>
    </RelativeLayout>

</ScrollView>