<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="example.stage.MainActivity" >

        <!-- Header  Starts -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                android:src="@drawable/sbg" />
        </FrameLayout>
        <!-- Header Ends -->

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            

            <TableRow>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="41dp"
                    android:textColor="#0099FF"
                    android:text="@string/mobnologin"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:ems="10"
                    android:textColor="#FFFFFF"
                    android:inputType="phone" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="41dp"
                    android:textColor="#0099FF"
                    android:text="@string/passwordlogin"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:ems="10"
                    android:textColor="#FFFFFF"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="270dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/buttonshape"
                    android:gravity="center"
                    android:onClick="loggin"
                    android:text="@string/loginbutton"
					android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
